[package]
name = "uniswap_v3_math"
version = "0.4.1"
edition = "2021"
license = "MIT"
description = "Uniswap V3 math in Rust"
readme = "README.md"
homepage = "https://github.com/0xKitsune/uniswap_v3_math"
repository = "https://github.com/0xKitsune/uniswap_v3_math"
keywords = ["uniswapV3", "math"]
exclude = ["target/*", ".github/*", ".gitignore", "Uniswap/*"]

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs.git", rev = "5dcd3b7", default-features = false, features = ["abigen"] }
eyre = "0.6.8"
ruint = "1.7.0"
thiserror = "1.0.38"
